Additional changes for themeify (add text shadow to make things more readable) for Issue #154.

--- a/octoprint_octolapse/static/css/octolapse.css
+++ b/octoprint_octolapse/static/css/octolapse.css
@@ -2475,7 +2475,12 @@ input.error {
     font-weight: 400;
 }
 
-
+#octolapse_tab i.fa, #octolapse_tab span.fa {
+	text-shadow: 0px 0px 1px #000;
+}
+#octolapse_tab i.fa-no-shadow, #octolapse_tab span.fa-no-shadow {
+    text-shadow:none;
+}
 /* CHECKBOX SWITCH CONTROL STYLE */
 /* Remove the existing checkbox */
 .toggle-switch-fa-lg input,
